--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./src/css/output.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./src/image/f0e047061aefc9d03aeb32fd70a93544.gif" type="image/x-icon">
+    <title>Sheep-Tea</title>
     <style>
         .color{
             background-color: #EDFEFF;
         }
     </style>
+
+
 </head>
 <body>
     <!-- header -->
@@ -41,13 +44,13 @@
                 <li class="group relative lg:flex hidden hover:text-amber-500 transition-all duration-300 ease-in-out">🍷Drink
                     <ul class="group-hover:flex transition-all duration-300 ease-in-out  absolute w-[200%] text-xl px-5 py-3 top-7 font-black rounded-2xl bg-amber-300 flex-col gap-2 hidden">
                         <li><a href="./src/Componnet/category/milktea.html" class="hover:text-amber-800 ">🧋Milk Tea</a></li>
-                        <li><a href="./src/Componnet/category/water.html" class=" hover:text-amber-950">☕Coffe</a></li>
+                        <li><a href="./src/Componnet/category/coffe.html" class=" hover:text-amber-950">☕Coffe</a></li>
                     </ul>
                 </li>
                 <li><a href="./src/Anim/anim.html" class="lg:flex hidden hover:text-amber-500">👤Log in</a></li>
                 <li class="flex lg:hidden"><a href="">👤</a></li>
                 <li class="flex lg:hidden"><a href="">🛒</a></li>
-                <li class="lg:flex hidden hover:text-amber-500">🛒Cart</li>
+                <li class=""><a href="./src/Anim/cart.html" class="lg:flex hidden hover:text-amber-500">🛒Cart</a></li>
             </ul>
         </div>
 
@@ -97,7 +100,7 @@
                     <i class="bi bi-telegram"></i>
                 </div>
             </div>
-            <div class="w-full lg:w-1/3 h-auto lg:border-b-0 lg:py-0  border-b-2 py-2 ">
+            <div class="w-full lg:w-1/3 h-auto lg:border-b-0 lg:py-0  border-b-2 py-2 px-3 ">
                 <h1 class="text-4xl font-bold ">SEARCH SOMETHING</h1>
                 <input type="text" name="" id="" placeholder="Search" class="w-full border px-5 py-4 mt-5">
                 <h1 class="text-2xl mt-5"><i class="bi bi-house-door-fill"> Warsaw, 00-967, Poland</i></h1>
@@ -132,7 +135,6 @@
         </div>
     </div>
 
-
-</body>
 <script type="module" src="./src/server/system.js"></script>
+</body>
 </html>
